--- a/login/index.html
+++ b/login/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Log In</title>
+    <title>Vite + React + TS</title>
+    <script type="module" crossorigin src="https://idakkr.github.io/harjoitustyo/login/index-DMBE2hB0.js"></script>
+    <link rel="stylesheet" crossorigin href="https://idakkr.github.io/harjoitustyo/login/index-n_ryQ3BS.css">
   </head>
   <body>
-    <p class="container"><a href="/harjoitustyo/">Mainpage</a></p>
     <div id="root"></div>
   </body>
 </html>
