--- a/login/index.html
+++ b/login/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <p class="container"><a href="/harjoitustyo/">Mainpage</a></p>
   </body>
 </html>
