--- a/login/index.html
+++ b/login/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <p class="container"><a href="/harjoitustyo/">Mainpage</a></p>
+    <p class="container"><a href="/harjoitustyo/">Takaisin etusivulle</a></p>
   </body>
 </html>
