--- a/login/index.html
+++ b/login/index.html
@@ -6,6 +6,16 @@
     <title>Log In</title>
     <script type="module" crossorigin src="https://idakkr.github.io/harjoitustyo/login/index-BJE17E95.js"></script>
     <link rel="stylesheet" crossorigin href="https://idakkr.github.io/harjoitustyo/login/index-n_ryQ3BS.css">
+    <!-- Matomo Tag Manager -->
+<script>
+  var _mtm = window._mtm = window._mtm || [];
+  _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
+  (function() {
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://pilvipalvelut-matomo.2.rahtiapp.fi/js/container_odKpPoAu_dev_1ca381488b560937a22d3f16.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Tag Manager -->
   </head>
   <body>
     <div id="root"></div>
